# zephyr

./: CMakeLists.txt  west.yml
boards/arm/nucleo_h743zi_minimal/: nucleo_h743zi_minimal.dts
boards/arm/stm32h753i_eval/: Kconfig.board  Kconfig.defconfig  stm32h753i_eval.dts  stm32h753i_eval.yaml
boards/arm/stm32h753i_eval2/: Kconfig.board  Kconfig.defconfig  stm32h753i_eval2.dts
cmake/modules/: rust.cmake
drivers/input/: CMakeLists.txt  Kconfig  Kconfig.exc7200  input_exc7200.c
dts/bindings/input/: eeti,exc7200.yaml
lib/rust/: Kconfig  main.c
lib/rust/zephyr-sys/: Cargo.toml  bindgen_input.h
lib/rust/zephyr/src/: allocator.rs  errno.rs  kernel.rs  lib.rs  printk.rs
lib/rust/zephyr/src/drivers/: gpio.rs
modules/lvgl/: lvgl.c
modules/wasm-micro-runtime/: CMakeLists.txt
samples/flash_error/: CMakeLists.txt  prj.conf
samples/flash_error/src/: main.c
samples/hello_world/: CMakeLists.txt  prj.conf
samples/hello_world/apps/hello_world_c/: build.sh  test.c  test.wasm
samples/hello_world/apps/hello_world_rs/: build.sh  test.wasm
samples/hello_world/src/: main.c
samples/rust/hello_rust/: prj.conf
samples/rust/hello_rust/src/: lib.rs
samples/rust/philosophers/: prj.conf
samples/subsys/display/lvgl/: prj.conf
samples/subsys/display/lvgl/boards/: native_posix.overlay  stm32h753i_eval.conf
samples/subsys/display/lvgl/src/: main.c
soc/arm/st_stm32/stm32h7/: mpu_regions.c
tests/subsys/llext/hello_world/: CMakeLists.txt
